<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity"
    android:background="@color/third">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:weightSum="100"
        android:background="@drawable/background_shape">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:gravity="bottom|center"
            android:layout_weight="30"
            android:textSize="55sp"
            android:textColor="@color/primary_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupPageHeadline"
            android:gravity="center"
            android:layout_weight="10"
            android:textColor="@color/primary_font"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="bottom"
            android:layout_marginHorizontal="50dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_font"/>

        <EditText
            android:id="@+id/emailSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColor="@color/secondary_font"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="50dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:autofillHints="emailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="bottom"
            android:layout_marginHorizontal="50dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_font"/>

        <EditText
            android:id="@+id/usernameSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColor="@color/secondary_font"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="50dp"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:autofillHints="username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="bottom"
            android:layout_marginHorizontal="50dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_font"/>

        <EditText
            android:id="@+id/passwordSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColor="@color/secondary_font"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword"
            android:layout_marginHorizontal="50dp"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:autofillHints="password" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:textColor="@color/primary_font"
            android:textAllCaps="true"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/button_white"
            android:fontFamily="@font/poppins_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10"
            android:layout_marginHorizontal="50dp"
            android:gravity="center|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_string"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/primary_font"/>
            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/login_link"
                android:textColor="@color/link_font"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_regular"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>