<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/third">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_shape"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogue"
                android:textColor="@color/primary_font"
                android:fontFamily="@font/atma_medium"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="10"
            android:text="@string/edit_profile"
            android:textColor="@color/primary_font"
            android:gravity="center"
            android:textSize="50sp"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="bottom"
            android:layout_marginHorizontal="50dp"
            android:text="@string/new_username"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_font"/>

        <EditText
            android:id="@+id/usernameUpdateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_new_username"
            android:textColor="@color/secondary_font"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginHorizontal="50dp"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:background="@drawable/edit_text_rounded_corner"/>

        <Button
            android:id="@+id/button_update"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/primary_font"
            android:textAllCaps="true"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_bold"/>

        <Button
            android:id="@+id/button_delete_account"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="@color/button_aler"
            android:fontFamily="@font/poppins_bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>